[project]
name = "speedtest-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "yyamada12",email = "12yacropolisy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]
packages = [{include = "speedtest_analyzer"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
visualize = "speedtest_analyzer.__main__:main"